--- a/css/input.css
+++ b/css/input.css
@@ -5,3 +5,5 @@
     @apply border border-gray-200 rounded-lg px-2 py-3 mb-5 w-full focus:outline-dashed focus:border-0 focus:outline-slate-300 placeholder:text-slate-400;
   }
 }
+
+@custom-variant dark (&:where(.dark, .dark *));
